wk_taa_taaqa/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AMS_Product_Category__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.AMS_Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Product_Line__c</fullName>
        <formula>/*If(Product_Config_Type__c==&apos;Option&apos;,  Text(OptionId__r.Product_Line__c) ,&apos;&apos; )*/
IF(ISPICKVAL(LineType__c,&apos;Option&apos;),
 Text(OptionId__r.Product_Line__c),
 Text( PricebookEntry.Product2.Product_Line__c )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Year__c</fullName>
        <label>Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdjustedPrice__c</fullName>
        <label>AdjustedPrice</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <label>Asset Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Renewal</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BasePrice__c</fullName>
        <label>BasePrice</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <label>Cancellation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeType__c</fullName>
        <label>ChargeType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>One Time Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Comments__c</fullName>
        <label>Dev Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtendedPrice__c</fullName>
        <label>ExtendedPrice</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Include_in_Reporting__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only lines with this field checked will have their pricing untouched, and can be included in relevant reports. Lines with this field NOT checked, will have the Total price zeroed out.</description>
        <label>Include in Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineStatus__c</fullName>
        <label>Asset Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Service</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYA_All_Years_Total_Price__c</fullName>
        <label>Contract Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MYA_Year_2_Price__c</fullName>
        <label>Year 2 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MYA_Year_3_Price__c</fullName>
        <label>Year 3 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MYA_Year_4_Price__c</fullName>
        <label>Year 4 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetPrice__c</fullName>
        <label>NetPrice</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptionPrice__c</fullName>
        <label>OptionPrice</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_Product_Family__c</fullName>
        <formula>IF(AND( ISPICKVAL(LineType__c, &quot;Option&quot;), Include_in_Reporting__c = TRUE),
TEXT(OptionId__r.Family),TEXT( PricebookEntry.Product2.Family)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Product_Type__c</fullName>
        <formula>IF(AND( ISPICKVAL(LineType__c, &quot;Option&quot;), Include_in_Reporting__c = TRUE),
TEXT(OptionId__r.Product_Type__c),TEXT(PricebookEntry.Product2.Product_Type__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent2__c</fullName>
        <formula>OptionId__r.Parent2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_Hidden__c</fullName>
        <description>Used to show the Product Name outside of SalesForce UI</description>
        <formula>PricebookEntry.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Config_Type__c</fullName>
        <formula>If(OptionId__c!=null,  TEXT(OptionId__r.Apttus_Config2__ConfigurationType__c),
                        Text(PricebookEntry.Product2.Apttus_Config2__ConfigurationType__c) )</formula>
        <label>Product Config Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ERP__c</fullName>
        <formula>If(OR(TEXT(PricebookEntry.Product2.ERP__c)=&quot;AMS&quot;,
      TEXT(PricebookEntry.Product2.ERP__c)=&quot;SAP&quot;),
      1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ERP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Hidden__c</fullName>
        <description>Used to show the Product Name outside of SalesForce UI</description>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Opportunity_Product__c</fullName>
        <displayFormat>OP-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>SFDC Opportunity Product #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Length__c</fullName>
        <formula>LEN( SFDC_Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Product # Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Product #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Opportunity_Product_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFS Opportunity Product Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Opportunity_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFS Opportunity Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingTerm__c</fullName>
        <label>SellingTerm</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steelbrick_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SteelBrick Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Renewal_Amount__c</fullName>
        <label>Target Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_Sales_Price__c</fullName>
        <label>Test Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Contract_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Contract ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>